--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
     margin: 0%;
     padding: 0%;
-    background-color: black;
+    background-color: white;
 }
 .container {
     font-family: Arial, Helvetica, sans-serif;
     color: #fff;
     font-weight: bold;
-    position: absolute;
+    position: absoluteca;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
